# Ecom-Recommendation-model

backend/: database.py  main.py  pyproject.toml  recommender.py
backend/data-conversion/: conversion.py
backend/data-viewer/: view_data.py
backend/database/: sunglass.csv  sunglass.db
backend/model/: faiss_index.idx  metadata.pkl  modelnames.txt
backend/static/: styles.css
backend/templates/: index.html  product_detail.html  products.html
backend/train-data/: train_data.py  trial.py
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/about/: page.tsx
frontend/app/components/: Footer.tsx  Hero.tsx  Navbar.tsx  ProductCard.tsx  Sidebar.tsx
frontend/app/products/[productId]/: page.tsx
